--- a/gpm/pom.xml
+++ b/gpm/pom.xml
@@ -59,6 +59,18 @@
 		<version>${spring.version}</version>
 	 </dependency>
 	 
+	 <dependency>
+    <groupId>org.springframework.data</groupId>
+    <artifactId>spring-data-jpa</artifactId>
+    <version>2.1.9.RELEASE</version>
+     </dependency>
+     
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<version>2.1.6.RELEASE</version>
+		</dependency>
+	 
 	 <!-- Transaction -->
 	<dependency>
 	    <groupId>javax.transaction</groupId>
